--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <link href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css" rel="stylesheet" />
     <link href='https://fonts.googleapis.com/css?family=Roboto:500,300,700,400' rel='stylesheet' type='text/css'>
     <link href="css/main.css" rel="stylesheet" />
-    <!-- Well, I try to testing my github.io pages -->
+
     <!-- Include the AngularJS library -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
   </head>
@@ -19,6 +19,9 @@
       <div class="container">
 
         <h1> {{ title }} </h1>
+        <br>
+        <h2> {{ promo }} </h2>
+      
 
       </div>
     </div>
