--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body ng-app="myApp">
     <div class="header">
       <div class="container">
-        <h1>Book End</h1>
+        <h1>Book Case</h1>
       </div>
     </div>
 
